--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <!-- colocar  -- "debug: true" en physics para visualizar el tamaño de la solidez del objeto -->
     <a-scene physics="gravity:0; debug: false">
   
-      <a-entity movement-controls kinematic-body>
+      <a-entity movement-controls kinematic-body rotation="0 -80 0 ">
     
-      <a-entity id="camera" camera position="0 2.5 0" rotation="0 -66 0 " look-controls 
+      <a-entity id="camera" camera position="-10 4 9"  look-controls 
       light="intensity:1; type:point; penumbra:0"></a-entity>
       </a-entity>
 
