quitar bananas pequeñas

--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
       <a-entity id="banana3" gltf-model="#sbanana"  scale="3 3 3" position="72.69536 1.5 -2.2951"></a-entity>
 
       <a-entity id="banana4" gltf-model="#sbanana"  scale="3 3 3" position="21.01511 1.5 -2.31601"></a-entity>
-
+<!-- 
       <a-entity id="banana5" gltf-model="assets/decoracion/small banana/scene.gltf" scale="3 3 2.91" position="-16.81081 1.42426 -31.71625"></a-entity>
 
       <a-entity id="banana6" gltf-model="assets/decoracion/small banana/scene.gltf" scale="3 3 2.91" position="18.36814 1.42426 -31.71625"></a-entity>
 
       <a-entity id="banana7" gltf-model="assets/decoracion/small banana/scene.gltf" scale="3 3 2.91" position="18.36814 1.42426 -31.71625"></a-entity>
 
-      <a-entity id="banana8" gltf-model="assets/decoracion/small banana/scene.gltf" scale="3 3 2.91" position="48.78899 1.42426 -31.71625"></a-entity>
+      <a-entity id="banana8" gltf-model="assets/decoracion/small banana/scene.gltf" scale="3 3 2.91" position="48.78899 1.42426 -31.71625"></a-entity> -->
       </a-scene>
   </body>
 </html>
