--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
       
 
       <!-- Decoración -->
-      <a-entity id="banana1" gltf-model="#banana" 
+     <!--  <a-entity id="banana1" gltf-model="#banana" 
       scale="3 3 3"
       position="-14 0 -2.9"></a-entity>
 
       <a-entity id="banana2" gltf-model="#banana"  scale="2.91036 2.91036 2.91036" position="-14.3372 0.07075 -26.13082"></a-entity>
 
       <a-entity id="banana3" gltf-model="#banana"  scale="3 3 3" position="72.69536 0 -2.2951"></a-entity>
-<!-- 
+
       <a-entity id="banana4" gltf-model="#sbanana"  scale="3 3 3" position="21.01511 1.5 -2.31601"></a-entity>
       <a-entity id="banana5" gltf-model="assets/decoracion/small banana/scene.gltf" scale="3 3 2.91" position="-16.81081 1.42426 -31.71625"></a-entity>
 
