--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <img id="1-11" src="assets/Espacio1/11.jpg">
       <img id="1-12" src="assets/Espacio1/12.jpg">
       <img id="1-13" src="assets/Espacio1/13.jpg">
+      <img id="infografia1" src="assets/Infografía 1.jpg">
 
       <!-- Espacio 2 assets -->
       <img id="2-1" src="assets/Espacio2/1.jpg">
@@ -116,6 +117,8 @@
       
       <!-- Espacio 1 imágenes -->
       <a-entity light="type: ambient; angle: 45; intensity: 0.4" id="luz espacio 1" position="0 10.471 -51.91801"></a-entity>
+
+      <a-image src="#infografia1" material="" geometry="" scale="14 10.3 1" id="infografia1" position="-6.706 6.000 -29.406"></a-image>
 
       <a-entity light="type: spot; angle: 30; groundColor: #fff; penumbra: 1; intensity: 0.3" id="luz 1-1" position="-2 9.566 -34.703" rotation="-110 0 0"></a-entity>
       <a-image src="#1-1" material="" geometry="" scale="4.5 8 1" id="1-1" position="-2 6 -30.703"></a-image>
