--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <img id="flyer" src="assets/flyer.png" >
 
       <!-- Decoración -->
-      <a-asset-item id="banana" src="assets/decoracion/banana_tree_low_poly.glb"></a-asset-item>
+      <a-asset-item id="banana" src="assets/decoracion/banana_comp.glb"></a-asset-item>
 
 
       <!-- Espacio 1 assets -->
@@ -224,17 +224,18 @@
 
       <!-- Plano (suelo) -->d
       <a-box src="#piso" repeat="20 10"scale="100 0.1 100" rotation="" position="31.803 0.01 -30.96604" material="" static-body></a-box>
-      <a-box src="#techo" scale="100 0.1 100" rotation="0 90 0"  position="31.803 12 -30.96604" material=" repeat: 2 2"   ></a-box>
+      <a-box src="#techo" scale="100 0.1 100" rotation="0 90 0"  position="31.803 12 -30.96604" material=" repeat: 1 1"   ></a-box>
 
+      <!-- <a-sky src="#techo"></a-sky> -->
       
 
       <!-- Decoración -->
-            <!-- 
+            
       <a-gltf-model id="banana1" gltf-model="#banana" 
       scale="3 3 3"
       position="-14 0 -2.9"></a-gltf-model>
 
-
+<!-- 
 
  
       <a-entity id="banana2" gltf-model="#banana"  scale="2.91036 2.91036 2.91036" position="-14.3372 0.07075 -26.13082"></a-entity>
