--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <img id="plano" src="assets/plano.jpg" >      
       <img id="pared" src="assets/pared.jpg" >
-      <img id="techo" src="assets/techo.jpg" >
+      <img id="techo" src="assets/techo.jpeg" >
       <img id="piso" src="assets/piso.jpg" >
       <img id="flyer" src="assets/flyer.png" >
 
@@ -224,9 +224,9 @@
 
       <!-- Plano (suelo) -->d
       <a-box src="#piso" repeat="20 10"scale="100 0.1 100" rotation="" position="31.803 0.01 -30.96604" material="" static-body></a-box>
-      <a-box src="#techo" scale="100 0.1 100" rotation="0 90 0"  position="31.803 12 -30.96604" material=" repeat: 1 1"   ></a-box>
+      <!-- <a-box src="#techo" scale="100 0.1 100" rotation="0 90 0"  position="31.803 12 -30.96604" material=" repeat: 1 1"   ></a-box> -->
 
-      <!-- <a-sky src="#techo"></a-sky> -->
+      <a-sky src="#techo"></a-sky>
       
 
       <!-- Decoración -->
