--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       
       </a-entity>
       </a-entity>
+      
+      <a-entity position="6.68098 5.50886 -23.84261" text="align: center; width: 6; wrapCount: 100; value: Gira la vista con el dedo, presiona la pantalla para avanzar." rotation="0 270 0" scale="3.8 3.8 3.8" id="instrucciones">
+      </a-entity>
 
 
       <a-assets>
