--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       </a-entity>
       
       <a-entity position="-12 5.50886 -18.273" 
-      text="align: center; width: 4; wrapCount: 100; value: Mueve la vista arrastrando con el dedo, presiona la pantalla para avanzar." rotation="0 270 0" scale="3.8 3.8 3.8" id="instrucciones">
+      text="align: center; width: 4; wrapCount: 100; value: Mueve la vista arrastrando el dedo" rotation="0 270 0" scale="3.8 3.8 3.8" id="instrucciones">
+      </a-entity>
+      <a-entity position="-12 5 -18.273" 
+      text="align: center; width: 4; wrapCount: 100; value: presiona la pantalla para avanzar." rotation="0 270 0" scale="3.8 3.8 3.8" id="instrucciones">
       </a-entity>
 
 
