--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       text="align: center; width: 4; wrapCount: 100; value: Mueve la vista moviendo el celular o arrastrando el dedo" rotation="0 270 0" scale="3.8 3.8 3.8" id="instrucciones">
       </a-entity>
       <a-entity position="-12 5.25 -18.273" 
-      text="align: center; width: 4; wrapCount: 100; value: presiona la pantalla para avanzar." rotation="0 270 0" scale="3.8 3.8 3.8" id="instrucciones">
+      text="align: center; width: 4; wrapCount: 100; value: y presiona la pantalla para avanzar." rotation="0 270 0" scale="3.8 3.8 3.8" id="instrucciones">
       </a-entity>
 
 
